tests/integration/typecheck/fail/mismatch_record_field_type.ncl
# test.type = 'error'
# eval = 'typecheck'
# 
# [test.metadata]
# error = 'TypecheckError::TypeMismatch'
#
# [test.metadata.expectation]
# expected = 'Number'
# found = 'Bool'
{ bla = true } : { bla : Number }